--- a/templates/contents.html
+++ b/templates/contents.html
@@ -22,6 +22,7 @@
     <div class="addnew">
         {% if current_user %}
             <a href="/addspell">Add new spell</a>
+            <a href="/additem">Add new item</a>
         {% else %}
             <p>Log in to add new additions</p>
         {% endif %}
