--- a/static/styles.css
+++ b/static/styles.css
@@ -13,3 +13,23 @@ table {
   tr:nth-child(even) {
     background-color: #dddddd;
   }
+
+#desc {
+  width: 100%;
+  height: 150px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  resize: vertical;
+}
+
+input {
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  resize: none;
+}
