--- a/static/styles.css
+++ b/static/styles.css
@@ -33,3 +33,27 @@ input, select {
   background-color: #f8f8f8;
   resize: none;
 }
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #rgb(209, 209, 209);
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: rgb(209, 209, 209);
+}
