--- a/templates/contents.html
+++ b/templates/contents.html
@@ -27,7 +27,7 @@
             <p>Log in to add new additions</p>
         {% endif %}
     </div>
-    <table>
+    <table id="sourceTable">
         <tr>
             <th><a href="/spells/1">Official</a></th>
             <th><a href="/spells/2">Homebrew</a></th>
