--- a/templates/usercreate.html
+++ b/templates/usercreate.html
@@ -5,12 +5,12 @@
 <form action="/createuser" method="POST">
     <table>
         <tr>
-            <th>Username</th>
-            <th>Password</th>
-        </tr>
-        <tr>
-            <input type="text" name="username">
-            <input type="password" name="password" id="">
+            <label for="username">Username: </label>
+            <input type="text" name="username" id="username">
+            <br>
+            <label for="password">Password: </label>
+            <input type="password" name="password" id="password">
+            <br>
             <input type="submit" value="Create User">
         </tr>
     </table>
