--- a/templates/userlogin.html
+++ b/templates/userlogin.html
@@ -2,17 +2,17 @@
 {% block body %}
 
 <h1>LOGIN</h1>
-<desc>{{ error }}</desc>
+<desc style="color: red;">{{ error }}</desc>
 <form action="/login" method="POST">
-    <table id ="login">
+    <table>
         <tr>
-            <th>Username</th>
-            <th>Password</th>
-        </tr>
-        <tr>
-            <th><input type="text" name="login_username"></th>
-            <th><input type="password" name="login_password"></th>
-            <th><input type="submit" value="Login"></th>
+            <label for="username">Username: </label>
+            <input type="text" name="login_username" id="username">
+            <br>
+            <label for="password">Password: </label>
+            <input type="password" name="login_password" id="password">
+            <br>
+            <input type="submit" value="Login">
         </tr>
        </table>
 </form>
