--- a/templates/addspell.html
+++ b/templates/addspell.html
@@ -29,7 +29,7 @@
         <table>
             <input type="hidden" name="spell_concentration" value="0">
             <tr><input type="checkbox" id="concentration" name="spell_concentration" value="1"></tr>
-            <label for="concentration">Concentration</label>
+            <label for="concentration"> Concentration</label>
         </table>
     </div>
 
@@ -57,17 +57,17 @@
         <table>
             <input type="hidden" name="v_component" value="0">
             <tr><input type="checkbox" id="v" name="v_component" value="1"></tr>
-            <label for="v"> (V) Verbal</label>
+            <label for="v"> (V) Verbal <abbr title="The Verbal component requires the spellcaster be able to verbally speak while casting the spell">?</abbr></label>
             <br>
 
             <input type="hidden" name="s_component" value="0">
             <tr><input type="checkbox" id="s" name="s_component" value="1"></tr>
-            <label for="s"> (S) Somatic</label>
+            <label for="s"> (S) Somatic <abbr title="The Somatic component requires the spellcaster be able to make a physical motion while casting the spell">?</abbr></label>
 
             <br>
             <input type="hidden" name="m_component" value="0">
             <tr><input type="checkbox" id="m" name="m_component" value="1"></tr>
-            <label for="m"> (M) Material</label>
+            <label for="m"> (M) Material <abbr title="The Material component requires the spellcaster to consume a specified material to cast the spell">?</abbr></label>
         </table>
     </div>
     <br>
