--- a/templates/contents.html
+++ b/templates/contents.html
@@ -17,7 +17,7 @@
                 <li class="navth"><a href="/login">Login</a></li>
             {% endif %}
             <li class="navth"><a href="/createuser">Create an account</a></li>
-            <li class="navth"><a href="/logout">Logout</a></li>
+            <li class="navth" id='logout'><a href="/logout">Logout</a></li>
         </ul>
     </nav>
     <div class="addnew">
