--- a/templates/addspell.html
+++ b/templates/addspell.html
@@ -3,24 +3,55 @@
 <form action="/addspell" method="POST">
 
     <div id="name">
-        <label for="name">Spell Name</label>
+        <label for="name"><b>Spell Name</b></label>
         <input id="name" type="text" name="spell_name">
         <br>
     </div>
 
     <div>
-        <label for="level">Spell Level</label>
+        <label for="level"><b>Spell Level</b></label>
         <input id="level" type="number" name="spell_level" min="0" max="9">
         <br>
     </div>
 
     <div>
-        <label for="duration">Spell Duration</label>
+        <label for="castingtime"><b>Casting Time</b></label>
+        <input id="castingtime" type="number" name="casting_time">
+
+        <input id="castingtime_unit" type="text" name="casting_time_unit" list="duration_units"
+    </div>
+
+    <div id="range_list">
+        <b>Range:</b>
+        <br>
+        <input id="touch" type="radio" name="range_type" value="Touch">
+        <label for="touch">Touch</label>
+        <br>
+        <input id="self" type="radio" name="range_type" value="Self">
+        <label for="self">Self</label>
+        <br>
+        <input id="sight" type="radio" name="range_type" value="Sight">
+        <label for="sight">Sight</label>
+        <br>
+        <input id="normal_range" type="radio" name="range_type" value="Normal_Range">
+        <label for="normal_range">Distance</label>
+        <input id="normal_range_amount" type="number" name="normal_range_amount">
+        <input id="normal_range_unit" type="text" name="normal_range_unit" list="ranges">
+        <datalist id="ranges">
+            {% set ranges = ["Feet", "Mile(s)"] %}
+            {% for range in ranges %}
+                <option value="{{ range }}">{{ range }}</option>
+            {% endfor %}
+        </datalist>
+    </div>
+
+    <div>
+        <label for="duration"><b>Spell Duration</b></label>
         <input id="duration" type="number" name="spell_duration">
 
         <input id="duration_unit" type="text" name="spell_duration_unit" list="duration_units">
         <datalist id="duration_units">
-            {% set units = ["Instantaneous", "Round(s)", "Minute(s)", "Hour(s)", "Day(s)", "Week(s)", "Month(s)", "Year(s)"] %}
+            {% set units = ["Instantaneous", "Round(s)", "Second(s)", "Minute(s)", "Hour(s)", "Day(s)", "Week(s)", "Month(s)", "Year(s)"] %}
             {% for unit in units %}
                 <option value="{{ unit }}">{{ unit }}</option>
             {% endfor %}
@@ -34,7 +65,7 @@
     </div>
 
     <div>
-        <label for="school">Spell School</label>
+        <label for="school"><b>Spell School</b></label>
         <select id="school" type="text" name="spell_school" list="schools">
             {% for school in schools %}
                 <option value="{{ school.SchoolName }}">{{ school.SchoolName }}</option>
@@ -43,7 +74,7 @@
     </div>
     
     <div>
-        <label for="source">Source</label>
+        <label for="source"><b>Source</b></label>
         <select id="source" type="text" name="spell_source" list="sources">
             {% for source in sources %}
                 <option value="{{ source.SourceName }}">{{ source.SourceName }}</option>
@@ -52,7 +83,7 @@
     </div>
     <br>
     <div>
-        Components:
+        <b>Components:</b>
         <br>
         <table>
             <input type="hidden" name="v_component" value="0">
@@ -72,7 +103,7 @@
     </div>
     <br>
     <div>
-        <label for="desc">Description</label>
+        <label for="desc"><b>Description</b></label>
         <textarea id="desc" type="text" name="spell_desc"></textarea>
     </div>
     <br>
