--- a/templates/addspell.html
+++ b/templates/addspell.html
@@ -18,23 +18,35 @@
         <label for="castingtime"><b>Casting Time</b></label>
         <input id="castingtime" type="number" name="casting_time">
 
-        <input id="castingtime_unit" type="text" name="casting_time_unit" list="duration_units"
+        <input id="castingtime_unit" type="text" name="casting_time_unit" list="duration_units">
     </div>
 
     <div id="range_list">
         <b>Range:</b>
         <br>
+
         <input id="touch" type="radio" name="range_type" value="Touch">
         <label for="touch">Touch</label>
         <br>
+
         <input id="self" type="radio" name="range_type" value="Self">
-        <label for="self">Self</label>
+        <label for="self">Self:</label>
+        <input id="self_pure" type='radio' name='self_type' value="Pure">
+        <label for="self_pure">Pure</label>
+        <input id="self_cone" type='radio' name='self_type' value="Cone">
+        <label for="self_cone">Cone</label>
+        <input id="self_radius" type='radio' name='self_type' value="Radius">
+        <label for="self_radius">Radius</label>
+        <input id="self_type_amount" type="number" name="self_type_amount">
+        <input id="self_type_unit" type="text" name="self_type_unit" list="ranges">
         <br>
+
         <input id="sight" type="radio" name="range_type" value="Sight">
         <label for="sight">Sight</label>
         <br>
+
         <input id="normal_range" type="radio" name="range_type" value="Normal_Range">
-        <label for="normal_range">Distance</label>
+        <label for="normal_range">Distance:</label>
         <input id="normal_range_amount" type="number" name="normal_range_amount">
         <input id="normal_range_unit" type="text" name="normal_range_unit" list="ranges">
         <datalist id="ranges">
@@ -113,5 +125,65 @@
 <form action="/spells">
     <input type="submit" value="Cancel">
 </form>
+
+<script>
+    
+    // document.getElementById('normal_range').addEventListener('input', function(event){
+    //     console.log(event.target);
+    // })
+
+    function changeRangeType(event){
+        const normal_range_amount = document.querySelector('#normal_range_amount');
+        const normal_range_unit = document.querySelector('#normal_range_unit');
+        const self_radius = document.querySelector('#self_radius');
+        const self_cone = document.querySelector('#self_cone');
+        const self_pure = document.querySelector('#self_pure');
+        const self_type_amount = document.querySelector('#self_type_amount');
+        const self_type_unit = document.querySelector('#self_type_unit');
+
+        if (event.target.value == 'Normal_Range') {
+           normal_range_amount.disabled = false;
+           normal_range_unit.disabled = false;
+           self_radius.disabled = true;
+           self_cone.disabled = true;
+           self_pure.disabled = true;
+           self_type_amount.disabled = true;
+           self_type_unit.disabled = true;
+           self_type_amount.value = '';
+           self_type_unit.value = '';
+
+        } else if (event.target.value == 'Self') {
+           normal_range_amount.disabled = true;
+           normal_range_unit.disabled = true;
+           normal_range_amount.value = '';
+           normal_range_unit.value = '';
+           self_radius.disabled = false;
+           self_cone.disabled = false;
+           self_pure.disabled = false;
+           self_type_amount.disabled = false;
+           self_type_unit.disabled = false;
+
+        } else {
+           normal_range_amount.disabled = true;
+           normal_range_unit.disabled = true;
+           normal_range_amount.value = '';
+           normal_range_unit.value = '';
+           self_radius.disabled = true;
+           self_cone.disabled = true;
+           self_pure.disabled = true;
+           self_type_amount.disabled = true;
+           self_type_unit.disabled = true;
+           self_type_amount.value = '';
+           self_type_unit.value = '';
+        }
+    }
+    document.querySelectorAll('input[type=radio][name=range_type]').forEach(function(element){
+        element.addEventListener('change', changeRangeType)
+    })
+    changeRangeType({ target: {} })
+
+</script>
+
+
 
 {% endblock body %}
